Fix spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -201,7 +201,7 @@ p.blurb {
     font-weight: 700;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    margin-top: 42px;
+    margin-top: 28px;
   }
 }
 
@@ -329,7 +329,7 @@ main {
 }
 
 .email {
-  margin-bottom: 64px;
+  margin-bottom: 48px;
 
   a.title {
     color: black;
